--- a/flash-site/src/pages/game/Game.module.css
+++ b/flash-site/src/pages/game/Game.module.css
@@ -2,12 +2,15 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 16px;
-  height: 400px;
+  gap: 12px;
+  height: 460px;
+  width: 380px;
 }
 
 .horizontalContainer {
+  width: 100%;
   display: flex;
   gap: 8px;
   align-items: center;
+  justify-content: space-between;
 }
